Recent Blocks: AccOuts in state, store historical roots only

--- a/preamble.tex
+++ b/preamble.tex
@@ -241,7 +241,11 @@
 \newcommand*{\partialstate}{\mathbb{U}}
 \newcommand*{\defxfer}{\mathbb{T}}
 \newcommand*{\defxfers}{\seq{\defxfer}}
-\newcommand*{\beefycommitmap}{\mathbf{C}}
+
+\newcommand*{\lastaccout}{\theta}
+
+\newcommand*{\recenthistory}{\beta_H}
+\newcommand*{\beefybelt}{\beta_B}
 
 \newcommand*{\accountspre}{\delta}
 \newcommand*{\accountspostacc}{\delta^\dagger}
