--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -1,34 +1,43 @@
 \section{Recent History}\label{sec:recenthistory}
 
 We retain in state information on the most recent $\mathsf{H}$ blocks. This is used to preclude the possibility of duplicate or out of date work-reports from being submitted.
-\begin{equation}
-  \beta \in \lseq\ltuple \isa{h}{\H}\ts\isa{\mathbf{b}}{\seq{\H?}}\ts\isa{s}{\H}\ts\isa{\mathbf{p}}{\dict{\H}{\H}} \rtuple\rseq_{:\mathsf{H}}
+\begin{align}
+  \beta &\in (\recenthistory, \beefybelt) \label{eq:recenthistory} \\
+  \recenthistory &\in \seq{\tuple{
+    \isa{h}{\H},
+    \isa{b}{\H},
+    \isa{s}{\H},
+    \isa{\mathbf{p}}{\dict{\H}{\H}}
+  }}_{:\mathsf{H}}\\
+  \beefybelt &\in \seq{\H?} \\
+  \lastaccout &\in \seq{\tup{\N_S, \H}}
+\end{align}
+
+For each recent block, we retain its header hash, its state root, its accumulation-result \textsc{mmb} and the corresponding work-package hashes of each item reported (which is no more than the total number of cores, $\mathsf{C} = 341$).
+
+During the accumulation stage, a value with the partial transition of this state is provided which contains the correction for the newly-known state-root of the parent block:
+\begin{equation}\label{eq:correctlaststateroot}
+  \recenthistory^\dagger \equiv \recenthistory\quad\exc\quad\recenthistory^\dagger[|\recenthistory| - 1]_s = \mathbf{H}_r
 \end{equation}
 
-For each recent block, we retain its header hash, its state root, its accumulation-result \textsc{mmr} and the corresponding work-package hashes of each item reported (which is no more than the total number of cores, $\mathsf{C} = 341$).
+We define the new Accumulation Output Log $\beefybelt$. This is formed from the block's accumulation-output sequence $\lastaccout'$ (defined in section \ref{sec:accumulation}), taking its root using the basic binary Merklization function ($\mathcal{M}_B$, defined in appendix \ref{sec:merklization}) and appending it to the previous log value with the \textsc{mmb} append function ($\mathcal{A}$, defined in appendix \ref{sec:mmr}). Throughout, the Keccak hash function is used to maximize compatibility with legacy systems:
+\begin{align}
+  \using \mathbf{s} &= \sq{\se_4(s) \frown \se(h) \mid \tup{s, h} \orderedin \lastaccout'}\\
+  \label{eq:buildbeefymap}
+  \beefybelt' &\equiv \mathcal{A}(\beefybelt, \mathcal{M}_B(\mathbf{s}, \hash_K), \hash_K)
+\end{align}
 
-During the accumulation stage, a value with the partial transition of this state is provided which contains the update for the newly-known roots of the parent block:
-\begin{equation}
-  \beta^\dagger \equiv \beta\quad\exc\quad\beta^\dagger[|\beta| - 1]_s = \mathbf{H}_r
-\end{equation}
-
-We define an item $n$ comprising the new block's header hash, its accumulation-result Merkle tree root and the set of work-reports made into it (for which we use the guarantees extrinsic, $\xtguarantees$). Note that the accumulation-result tree root $r$ is derived from $\beefycommitmap$ (defined in section \ref{sec:accumulation}) using the basic binary Merklization function $\mathcal{M}_B$ (defined in appendix \ref{sec:merklization}) and appending it using the \textsc{mmr} append function $\mathcal{A}$ (defined in appendix \ref{sec:mmr}) to form a Merkle mountain range.
+The final state transition for $\recenthistory$ appends a new item including the new block's header hash, a Merkle commitment to the block's Accumulation Output Log and the set of work-reports made into it (for which we use the guarantees extrinsic, $\xtguarantees$). Formally:
 \begin{equation}
   \begin{aligned}
-    \label{eq:buildbeefymap}
-    \using r &= \mathcal{M}_B(\orderby{s}{\se_4(s)\frown\se(h) \mid (s, h) \in \beefycommitmap}, \hash_K) \\
-    \using \mathbf{b} &= \mathcal{A}(\text{last}(\sq{\sq{}} \concat \sq{x_\mathbf{b} \mid x \orderedin \beta}), r, \hash_K) \\
-    \using \mathbf{p} &= \{ ((g_w)_s)_h \mapsto ((g_w)_s)_e \mid g \in \xtguarantees \} \\
-    \using n &= \tup{
-      \mathbf{p}\ts
-      \is{h}{\hash(\mathbf{H})}\ts\mathbf{b}\ts\is{s}{\H^0}
-    }
+    \recenthistory' &\equiv {\overleftarrow{\recenthistory^\dagger \doubleplus \tup{
+      \mathbf{p},
+      \is{h}{\hash(\mathbf{H})},
+      \is{b}{\mathcal{M}_R(\beefybelt')},
+      \is{s}{\H^0}
+      }}}^\mathsf{H} \\
+    \where \mathbf{p} &= \{ ((g_w)_s)_h \mapsto ((g_w)_s)_e \mid g \in \xtguarantees \}
   \end{aligned}
 \end{equation}
 
-The state-trie root is as being the zero hash, $\H^0$ which while inaccurate at the end state of the block $\beta'$, it is nevertheless safe since $\beta'$ is not utilized except to define the next block's $\beta^\dagger$, which contains a corrected value for this.
-
-The final state transition is then:
-\begin{equation}
-  \beta' \equiv {\overleftarrow{\beta^\dagger \doubleplus n}}^\mathsf{H}
-\end{equation}
+The new state-trie root is the zero hash, $\H^0$, which is inaccurate but safe since $\recenthistory'$ is not utilized except to define the next block's $\recenthistory^\dagger$, which contains a corrected value for this, as per equation \ref{eq:correctlaststateroot}.
