Fix quotes using homogeneous style

--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -182,7 +182,7 @@ For the latter justification $\mathcal{J}_x$ to be acceptable, we must assume th
 
 As above, we may assume a default value for $H$ of the Blake 2b hash function, $\hash$.
 
-For justifications and Merkle root calculations, a constancy preprocessor function $C$ is applied which hashes all data items with a fixed prefix "leaf" and then pads the overall size to the next power of two with the zero hash $\mathbb{H}_0$:
+For justifications and Merkle root calculations, a constancy preprocessor function $C$ is applied which hashes all data items with a fixed prefix ``leaf'' and then pads the overall size to the next power of two with the zero hash $\mathbb{H}_0$:
 \begin{equation}
   C\colon\left\{\begin{aligned}
     (\seq{\Y}, \Y \to \H) &\to \seq{\H}\\
