PVM Invocations: `info` uses fixed length types

--- a/preamble.tex
+++ b/preamble.tex
@@ -195,7 +195,7 @@
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
 
 \newcommand*{\wr¬avspec}{s} % O/L ¬service TODO: make bold
-\newcommand*{\wr¬context}{x} % TODO: Consider renaming to \mathbf{c} and/or making bold, like package
+\newcommand*{\wr¬context}{x} % TODO: Make bold like package. Consider renaming to \mathbf{c}
 \newcommand*{\wr¬core}{\¬core}
 \newcommand*{\wr¬authorizer}{\¬authorizer}
 \newcommand*{\wr¬srlookup}{\mathbf{l}}
