Tweak chain params

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -313,23 +313,23 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
           \se_2(\mathsf{H}),
           \se_2(\mathsf{I}),
           \se_2(\mathsf{J}),
-          \se_4(\mathsf{L}),
-          \se_2(\mathsf{O}),\\
-          &\se_2(\mathsf{P}),
+          \se_2(\mathsf{K}),\\
+          &\se_4(\mathsf{L}),
+          \se_2(\mathsf{N}),
+          \se_2(\mathsf{O}),
+          \se_2(\mathsf{P}),
           \se_2(\mathsf{Q}),
           \se_2(\mathsf{R}),
-          \se_2(\mathsf{S}),
           \se_2(\mathsf{T}),
-          \se_2(\mathsf{U}),
-          \se_2(\mathsf{V}),
-          \se_4(\mathsf{W}_A),\\
-          &\se_4(\mathsf{W}_B),
+          \se_2(\mathsf{U}),\\
+          &\se_2(\mathsf{V}),
+          \se_4(\mathsf{W}_A),
+          \se_4(\mathsf{W}_B),
           \se_4(\mathsf{W}_C),
           \se_4(\mathsf{W}_E),
-          \se_4(\mathsf{W}_G),
-          \se_4(\mathsf{W}_M),
-          \se_4(\mathsf{W}_P),\\
-          &\se_4(\mathsf{W}_R),
+          \se_4(\mathsf{W}_M),\\
+          &\se_4(\mathsf{W}_P),
+          \se_4(\mathsf{W}_R),
           \se_4(\mathsf{W}_T),
           \se_4(\mathsf{W}_X),
           \se_4(\mathsf{Y})
